--- a/Vizov/Base.lproj/Main.storyboard
+++ b/Vizov/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--Item 2-->
         <scene sceneID="XFc-uw-JJE">
             <objects>
-                <viewController id="ONS-cS-O2F" sceneMemberID="viewController">
+                <viewController id="ONS-cS-O2F" customClass="PersonalPageViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="use-QB-QRN"/>
                         <viewControllerLayoutGuide type="bottom" id="ypG-LM-11Q"/>
@@ -138,6 +138,9 @@
                         </variation>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 2" id="dLQ-9v-8cI"/>
+                    <connections>
+                        <outlet property="settedTitle" destination="eyc-YQ-EHZ" id="FzP-iP-KO0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="16R-Mc-vnS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -254,21 +257,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u8e-QW-x83">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="今すぐ開始">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="16" y="470" width="160" height="73"/>
-                                </variation>
-                                <connections>
-                                    <segue destination="ONS-cS-O2F" kind="presentation" id="u2q-eM-RJt"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BEFORE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OvB-P0-13Y">
                                 <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -324,6 +312,21 @@
                                     <rect key="frame" x="16" y="135" width="160" height="150"/>
                                 </variation>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I3Q-TW-xfT">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="後から開始">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="212" y="470" width="160" height="73"/>
+                                </variation>
+                                <connections>
+                                    <segue destination="ONS-cS-O2F" kind="presentation" id="iMi-Tr-CzX"/>
+                                </connections>
+                            </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="J0P-fx-efC">
                                 <rect key="frame" x="20" y="20" width="368" height="154"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -376,9 +379,6 @@
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="j5Z-u7-e0S" kind="show" identifier="rowNumber" id="KfP-tW-TEV"/>
-                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CellSecond" id="etU-Tx-7vP">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -417,9 +417,6 @@
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="j5Z-u7-e0S" kind="show" identifier="rowNumber" id="vfp-Gu-tG3"/>
-                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell tag="2000" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CellThird" id="DwS-Kf-Fr0">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -470,48 +467,48 @@
                                 </prototypes>
                                 <sections/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="16" y="300" width="356" height="154"/>
+                                    <rect key="frame" x="0.0" y="293" width="356" height="154"/>
                                 </variation>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I3Q-TW-xfT">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u8e-QW-x83">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="後から開始">
+                                <state key="normal" title="今すぐ開始">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="212" y="470" width="160" height="73"/>
+                                    <rect key="frame" x="16" y="470" width="160" height="73"/>
                                 </variation>
                                 <connections>
-                                    <segue destination="ONS-cS-O2F" kind="presentation" id="iMi-Tr-CzX"/>
+                                    <segue destination="ONS-cS-O2F" kind="presentation" identifier="NowSegue" id="u2q-eM-RJt"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
                             <mask key="subviews">
-                                <exclude reference="u8e-QW-x83"/>
                                 <exclude reference="OvB-P0-13Y"/>
                                 <exclude reference="asM-LL-MbS"/>
                                 <exclude reference="BGG-8Y-fS4"/>
                                 <exclude reference="QgE-PN-av2"/>
                                 <exclude reference="Tfi-nm-JC0"/>
-                                <exclude reference="J0P-fx-efC"/>
                                 <exclude reference="I3Q-TW-xfT"/>
+                                <exclude reference="J0P-fx-efC"/>
+                                <exclude reference="u8e-QW-x83"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
-                                <include reference="u8e-QW-x83"/>
                                 <include reference="OvB-P0-13Y"/>
                                 <include reference="asM-LL-MbS"/>
                                 <include reference="BGG-8Y-fS4"/>
                                 <include reference="QgE-PN-av2"/>
                                 <include reference="Tfi-nm-JC0"/>
-                                <include reference="J0P-fx-efC"/>
                                 <include reference="I3Q-TW-xfT"/>
+                                <include reference="J0P-fx-efC"/>
+                                <include reference="u8e-QW-x83"/>
                             </mask>
                         </variation>
                     </view>
@@ -525,7 +522,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6qX-3a-4sc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2157" y="264"/>
+            <point key="canvasLocation" x="2181" y="264"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="f0W-1R-2aG">
@@ -609,19 +606,12 @@
                                     </mask>
                                 </variation>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="214" y="184" width="170" height="170"/>
+                                    <rect key="frame" x="194" y="184" width="170" height="170"/>
                                     <mask key="subviews">
                                         <include reference="I59-pc-Cyd"/>
                                     </mask>
                                 </variation>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="fbF-my-eoQ">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="41" y="362" width="317" height="174"/>
-                                </variation>
-                            </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NOW" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fc9-aP-sNZ">
                                 <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -641,7 +631,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="214" y="155" width="170" height="29"/>
+                                    <rect key="frame" x="194" y="155" width="170" height="29"/>
                                 </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BIy-yw-nEo">
@@ -653,12 +643,19 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="194" y="77" width="190" height="70"/>
+                                    <rect key="frame" x="174" y="77" width="190" height="70"/>
                                 </variation>
                                 <connections>
                                     <segue destination="54O-ne-JjD" kind="show" id="MEV-Fu-iRv"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="fbF-my-eoQ">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="30" y="362" width="317" height="174"/>
+                                </variation>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -666,10 +663,10 @@
                                 <exclude reference="91j-Jr-gGO"/>
                                 <exclude reference="Im9-Dd-D6h"/>
                                 <exclude reference="irj-MF-Fju"/>
-                                <exclude reference="fbF-my-eoQ"/>
                                 <exclude reference="fc9-aP-sNZ"/>
                                 <exclude reference="nmg-Ch-VnJ"/>
                                 <exclude reference="BIy-yw-nEo"/>
+                                <exclude reference="fbF-my-eoQ"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -677,10 +674,10 @@
                                 <include reference="91j-Jr-gGO"/>
                                 <include reference="Im9-Dd-D6h"/>
                                 <include reference="irj-MF-Fju"/>
-                                <include reference="fbF-my-eoQ"/>
                                 <include reference="fc9-aP-sNZ"/>
                                 <include reference="nmg-Ch-VnJ"/>
                                 <include reference="BIy-yw-nEo"/>
+                                <include reference="fbF-my-eoQ"/>
                             </mask>
                         </variation>
                     </view>
@@ -715,7 +712,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Oni-Rg-k5W"/>
-        <segue reference="vfp-Gu-tG3"/>
+        <segue reference="u2q-eM-RJt"/>
     </inferredMetricsTieBreakers>
 </document>
